# RuntimeMemoryGuardian

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci-linux.yml  ci-windows.yml  code-quality.yml  release.yml
benchmarks/: CMakeLists.txt  bench_hash_provider.cpp  bench_hook_detector.cpp  bench_memory_scanner.cpp
cmake/: RMGCompilerWarnings.cmake  RMGPlatform.cmake  RMGSanitizers.cmake  RMGVersion.cmake.in  RuntimeMemoryGuardianConfig.cmake.in
docs/: Doxyfile
docs/architecture/: HOOK_DETECTOR.md  INTEGRITY_CHECKER.md  MEMORY_SCANNER.md  OVERVIEW.md  PLATFORM_LAYER.md  PROCESS_MONITOR.md
docs/guides/: BUILDING.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md
examples/: CMakeLists.txt
examples/01_basic_integrity_check/: main.cpp
examples/02_memory_scanning/: main.cpp
examples/03_hook_detection/: main.cpp
examples/04_module_monitoring/: main.cpp
examples/05_full_process_monitor/: main.cpp
include/rmg/: export.hpp  rmg.hpp  version.hpp.in
include/rmg/api/: runtime_memory_guardian.hpp
include/rmg/core/: error.hpp  event.hpp  logger.hpp  non_copyable.hpp  types.hpp
include/rmg/hooks/: eat_hook_detector.hpp  hook_detector.hpp  hook_types.hpp  iat_hook_detector.hpp  inline_hook_detector.hpp
include/rmg/integrity/: code_section_info.hpp  hash_provider.hpp  integrity_baseline.hpp  integrity_checker.hpp
include/rmg/memory/: memory_diff.hpp  memory_region_enumerator.hpp  memory_scanner.hpp  memory_snapshot.hpp
include/rmg/modules/: module_enumerator.hpp  module_info.hpp  module_monitor.hpp
include/rmg/platform/: memory_region.hpp  native_types.hpp  platform_factory.hpp  platform_traits.hpp  process_handle.hpp
include/rmg/process/: monitor_config.hpp  monitor_event.hpp  process_monitor.hpp
include/rmg/utils/: byte_buffer.hpp  crc32.hpp  scoped_timer.hpp  sha256.hpp  string_utils.hpp
src/: CMakeLists.txt
src/api/: runtime_memory_guardian.cpp
src/core/: error.cpp  logger.cpp
src/hooks/: eat_hook_detector.cpp  hook_detector.cpp  hook_types.cpp  iat_hook_detector.cpp  inline_hook_detector.cpp
src/integrity/: hash_provider.cpp  integrity_baseline.cpp  integrity_checker.cpp
src/memory/: memory_diff.cpp  memory_region_enumerator.cpp  memory_scanner.cpp  memory_snapshot.cpp
src/modules/: module_enumerator.cpp  module_monitor.cpp
src/platform/: platform_factory.cpp
src/platform/linux/: linux_memory_region_enumerator.cpp  linux_module_enumerator.cpp  linux_platform_traits.cpp  linux_process_handle.cpp  linux_process_handle.hpp
src/platform/windows/: win_memory_region_enumerator.cpp  win_module_enumerator.cpp  win_platform_traits.cpp  win_process_handle.cpp  win_process_handle.hpp
src/process/: monitor_config.cpp  monitor_event.cpp  process_monitor.cpp
src/utils/: byte_buffer.cpp  crc32.cpp  sha256.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_full_scan_cycle.cpp  test_process_monitor_integration.cpp
tests/unit/core/: test_error.cpp  test_logger.cpp
tests/unit/hooks/: test_hook_detector.cpp
tests/unit/integrity/: test_hash_provider.cpp  test_integrity_checker.cpp
tests/unit/memory/: test_memory_diff.cpp  test_memory_scanner.cpp
tests/unit/modules/: test_module_monitor.cpp
tests/unit/utils/: test_crc32.cpp  test_sha256.cpp
tools/: CMakeLists.txt
tools/baseline-generator/: main.cpp
tools/rmg-cli/: main.cpp
